run tests with github actions
* for master branch, and
* for every pull request