@@ -53,6 +53,29 @@
 
     <profiles>
         <profile>
+            <id>smoke-test</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                          <excludes>
+                            <exclude>org/littleshoot/proxy/websockets/*</exclude>
+                            <exclude>org/littleshoot/proxy/BadClientAuthenticationTCPChainedProxyTest*</exclude>
+                            <exclude>org/littleshoot/proxy/EncryptedUDTChainedProxyTest*</exclude>
+                            <exclude>org/littleshoot/proxy/MitmWithBadClientAuthenticationTCPChainedProxyTest*</exclude>
+                            <exclude>org/littleshoot/proxy/MitmWithEncryptedUDTChainedProxyTest*</exclude>
+                            <exclude>org/littleshoot/proxy/MitmWithUnencryptedUDTChainedProxyTest*</exclude>
+                            <exclude>org/littleshoot/proxy/UnencryptedUDTChainedProxyTest*</exclude>
+                            <exclude>org/littleshoot/proxy/VariableSpeedClientServerTest*</exclude>
+                          </excludes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
             <id>release</id>
             <activation>
                 <property>
@@ -510,7 +533,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>-Xmx1g -XX:MaxPermSize=256m</argLine>
+                    <argLine>-Xmx1g</argLine>
                 </configuration>
             </plugin>
 
